Implement W2 bulk lead assignment
